[package]
name = "conrod_ui_first"
version = "0.1.0"
authors = ["davidroeca <david.roeca@gmail.com>"]

[dependencies]
conrod = {
  version = "0.58.0",
  features = ["winit"]
}
glutin = {
  version = "0.13.1",
  features = ["winit"]
}
winit = {
  version = "0.7",
  features = ["winit"]
}
gfx = {
  version = "0.17.1",
  features = ["gfx_rs"]
}
gfx_core = {
  version = "0.8.2",
  features = ["gfx_rs"]
}

